--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-favicon": "0.0.18",
     "react-scripts": "4.0.1",
+    "react-slider": "^1.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
